--- a/templates/layout.html
+++ b/templates/layout.html
@@ -105,10 +105,10 @@
 
   </footer>
   <div class="footer container-fluid pt-4 pb-1 ">
-    <p>Made with ❤ By Kritika Parmar<br>
+    <p>Made with ❤ By Karjout Abdeslam<br>
     </p>
     <div class="rounded-social-buttons">
-      <a class="social-button github" href="https://github.com/kritikaparmar-programmer/HealthCheck" target="_blank"><i
+      <a class="social-button github" href="https://github.com/karjout" target="_blank"><i
           class="fab fa-github"></i></a>
     </div>
   </div>
